@@ -1,3 +1,10 @@
+2007-04-07  Nate Nielsen  <nielsen@memberwebs.com>
+
+    * libseahorse/seahorse-ssh-key-data.c: 
+    * libseahorse/seahorse-util.c:
+    * plugins/nautilus/seahorse.xml: Enable importing of plain SSH
+    keys, generated elsewhere. Fixes bug #424473
+    
 2007-04-06  Nate Nielsen  <nielsen@memberwebs.com>
 
     * libseahorse/seahorse-widget.c: Make 'Keyserver Results' window help
